Managae reservation part is done

--- a/MyHotel/MyHotel.csproj
+++ b/MyHotel/MyHotel.csproj
@@ -82,6 +82,7 @@
     <Compile Include="MySQLConnection.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reservation.cs" />
     <Compile Include="Room.cs" />
     <EmbeddedResource Include="loginForm.resx">
       <DependentUpon>loginForm.cs</DependentUpon>
